experimental/parser/testdata/parser/range/reserved_default_syntax.proto.stderr.txt
error: cannot use identifiers in reserved range in syntax mode
  --> testdata/parser/range/reserved_default_syntax.proto:6:14
   |
 1 | syntax = "proto2";
   | ------------------ syntax mode is specified here
...
 6 |     reserved foo, "foo";
   |              ^^^
  help: quote it to make it into a string literal
   |
 6 |     reserved "foo", "foo";
   |              +   +

encountered 1 error
